@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-22T16:09:42Z",
-  "count_outdated" : 27,
-  "uniques_outdated" : 21,
+  "timestamp" : "2022-05-29T00:40:20Z",
+  "count_outdated" : 28,
+  "uniques_outdated" : 22,
   "count" : 37,
   "uniques" : 31,
   "clones" : [
-    {
-      "timestamp": "2022-05-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-15T00:00:00Z",
       "count": 1,
