@@ -1,12 +1,7 @@
 {
-  "count": 10,
-  "uniques": 9,
+  "count": 9,
+  "uniques": 8,
   "clones": [
-    {
-      "timestamp": "2022-05-14T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-15T00:00:00Z",
       "count": 1,
